# Multi-sensory-Based-Robot-Dynamic-manipulation

./: final.code-workspace
Deliverables/: README.txt
Deliverables/plots/: joint_control.xml  joint_control_error.xml  op_control_err.xml  op_control_pos.xml  op_control_vel_acc.xml
Deliverables/plots/data/: joint_control.csv
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/control_core/: .catkin  local_setup.sh
devel/.private/control_core_msgs/: .catkin  setup.sh
devel/.private/object_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/object_server/: .catkin  local_setup.sh
devel/.private/rviz_camera_stream/: .catkin  local_setup.sh  setup.sh
devel/.private/tum_ics_ur10_bringup/: .catkin
devel/.private/tum_ics_ur10_controller_tutorial/: .catkin  .rosinstall  local_setup.sh
devel/.private/tum_ics_ur10_description/: .catkin  local_setup.sh  setup.sh
devel/.private/ur_model/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/visual_perception/: .catkin  setup.sh
devel/include/control_core_msgs/: AngularState.h  AngularStateStamped.h  CartesianState.h  CartesianStateStamped.h  CartesianStateTrajectory.h  JointState.h  JointStateStamped.h  JointStateTrajectory.h  LinearState.h  LinearStateStamped.h  LinearStateTrajectory.h  Vector.h  VectorStamped.h
devel/include/object_msgs/: AddMovingObjects.h  AddMovingObjectsRequest.h  AddMovingObjectsResponse.h  Object.h  Objects.h
devel/lib/control_core/: geometry  polynomial  spline
devel/lib/object_server/: interactive_obstacle_node  moving_obstacle_node  object_server_node  visual_markers_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  control_core.pc  control_core_msgs.pc  object_msgs.pc  object_server.pc  rviz_camera_stream.pc  tum_ics_ur10_bringup.pc  tum_ics_ur10_controller_tutorial.pc  tum_ics_ur10_description.pc  ur_model.pc  visual_perception.pc
devel/lib/tum_ics_ur10_controller_tutorial/: test_jointspace_controller  test_jointspace_controller_1
devel/lib/ur_model/: ur_model_node
devel/lib/visual_perception/: visual_perception_node
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/control_core/cmake/: control_coreConfig-version.cmake  control_coreConfig.cmake
devel/share/control_core_msgs/cmake/: control_core_msgs-msg-extras.cmake  control_core_msgs-msg-paths.cmake  control_core_msgsConfig-version.cmake  control_core_msgsConfig.cmake
devel/share/object_msgs/cmake/: object_msgs-msg-extras.cmake  object_msgs-msg-paths.cmake  object_msgsConfig-version.cmake  object_msgsConfig.cmake
devel/share/object_server/cmake/: object_serverConfig-version.cmake  object_serverConfig.cmake
logs/tum_ics_ur10_controller_tutorial/: build.check.450.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  (+443 more)
src/: README.txt
src/first_sub/C++/: jointspace_controller.cpp  jointspace_controller.h
src/first_sub/matlab_simbolics/: RotY.m  YrTheta_symbolic.m  mat2c.m  symbolicUR.m
src/matlab/: DSimulator_robot3GDL.mdl  DSimulator_robot3GDL.mdl.r2018b  DSimulator_robot3GDL.slxc  Dinamic_ur10_3DOF.m  R2EulerA.m  RotX.m  RotZ.m  SimpleRobotPlotROS.m  Tau.m  TrajGen.m  YrTheta_symbolic.m  getTF.m  relativeTrans.m
src/tum_ics_ur10_controller_tutorial/: CMakeLists.txt  package.xml
src/tum_ics_ur10_controller_tutorial/include/tum_ics_ur10_controller_tutorial/: jointspace_controller.h  jointspace_controller_1.h
src/tum_ics_ur10_controller_tutorial/launch/: test_jointspace_controller.launch  test_jointspace_controller_1.launch
src/tum_ics_ur10_controller_tutorial/launch/configs/: jointspace_controller.yaml  jointspace_controller_1.yaml
src/tum_ics_ur10_controller_tutorial/src/: jointspace_controller.cpp  jointspace_controller_1.cpp  my_models.cpp
src/tum_ics_ur10_controller_tutorial/src/Applications/: test_jointspace_controller.cpp  test_jointspace_controller_1.cpp
src/ur_model/src/: model_ur.cpp
src/utilities/object_server/: CMakeLists.txt  package.xml
(+258 files in other folders)
